--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -98,24 +98,24 @@ deploy_lab:
 #   only:
 #     - master
 
-# deploy_production:
-#   stage: deploy
-#   tags:
-#     - deploy
-#     - external
-#   script:
-#     - 'which ssh-agent || ( apt-get update && apt-get install openssh-client )'
-#     - eval $(ssh-agent -s)
-#     - mkdir -p ~/.ssh && chmod 700 ~/.ssh
-#     - echo "$PRODUCTION_USER_KEY" > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa
-#     - sed -n ':a;N;$!ba;s/\n/ /g' ~/.ssh/id_rsa
-#     - ssh-add ~/.ssh/id_rsa
-#     - gem install capistrano-rails
-#     - gem install capistrano3-unicorn
-#     - gem install capistrano-sidekiq
-#     - cap production deploy
-#   environment:
-#     name: production
-#   only:
-#     - master
-#   when: manual
+deploy_production:
+  stage: deploy
+  tags:
+    - deploy
+    - external
+  script:
+    - 'which ssh-agent || ( apt-get update && apt-get install openssh-client )'
+    - eval $(ssh-agent -s)
+    - mkdir -p ~/.ssh && chmod 700 ~/.ssh
+    - echo "$PRODUCTION_USER_KEY" > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa
+    - sed -n ':a;N;$!ba;s/\n/ /g' ~/.ssh/id_rsa
+    - ssh-add ~/.ssh/id_rsa
+    - gem install capistrano-rails
+    - gem install capistrano3-unicorn
+    - gem install capistrano-sidekiq
+    - cap production deploy
+  environment:
+    name: production
+  only:
+    - master
+  when: manual
